[package]
name = "rehost-crates-io"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde_json = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.13.1"
rlay_ontology = "0.2.6"
cid_fork_rlay = "0.3.1"
serde_cbor = "0.11.1"
